[package]
name = "test"
version = "0.0.1"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "A library template."
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/template.rust-lib"
readme = "./README.MD"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]

